--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch": "npm-run-all --parallel dev reload"
   },
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2015-rollup": "^3.0.0",
     "cssnano": "^3.10.0",
@@ -38,6 +39,7 @@
     "debug": "^2.6.0",
     "eslint-plugin-react": "^6.9.0",
     "global": "^4.3.1",
+    "postcss-modules": "^0.6.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
